[metadata]
name = seismic
version = 0.5.0
author = Peter Makus, Christoph Sens-Schönfelder, and the SeisMIC development team
author_email = makus@gfz-potsdam.de
description = Seismological Monitoring using Interferometric Concepts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PeterMakus/SeisMIC
project_urls =
    Documentation = https://petermakus.github.io/SeisMIC/index.html
    doi = https://doi.org/10.5880/GFZ.2.4.2022.002
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Utilities
keywords = Seismology, Ambient Noise, Earth Sciences, Environmental Seismology, Volcano Seismology, Critical Zone, Time-dependent dynamics, Inteferometry, Monitoring, Structural Health


[options]
package_dir =
    = src
python_requires = >=3.10
install_requires =
    geographiclib
    h5py
    matplotlib
    mpi4py
    numpy
    obspy >=1.3.1
    pip
    prov
    pyyaml
    scipy
    flake8
    tqdm
tests_require =
    pytest
    py
    flake8
zip_safe = False

[options.extras_require]
docs = 
    sphinx<6.0
    pydata-sphinx-theme
    sphinx-copybutton
    sphinxcontrib-mermaid
    jinja2<3.1
    jupyter
tests =
    pytest
    py
    flake8

[options.packages.find]
where = src
