[metadata]
name = seismic
version = 0.5.11
author = Peter Makus, Christoph Sens-Schönfelder, and the SeisMIC development team
author_email = makus@gfz-potsdam.de
description = Seismological Monitoring using Interferometric Concepts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PeterMakus/SeisMIC
project_urls =
    Documentation = https://petermakus.github.io/SeisMIC/index.html
    doi = https://doi.org/10.5880/GFZ.2.4.2022.002
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Utilities
keywords = Seismology, Ambient Noise, Earth Sciences, Environmental Seismology, Volcano Seismology, Critical Zone, Time-dependent dynamics, Inteferometry, Monitoring, Structural Health


[options]
package_dir =
    = src
python_requires = >=3.10
install_requires =
    geographiclib==2.0
    h5py <=3.9.0
    matplotlib <=3.7.2
    mpi4py <=3.1.4
    numpy <=1.25.2
    obspy<=1.4.0, >=1.3.1

    pip
    prov
    pyyaml
    scipy <=1.11.2
    flake8
    tqdm
tests_require =
    pytest
    py
    flake8
zip_safe = False

[options.package_data]
seismic =
    plot/batlow.txt

[options.extras_require]
docs = 
    sphinx<6.0
    pydata-sphinx-theme
    sphinx-copybutton
    sphinxcontrib-mermaid
    jinja2<3.1
    jupyter
tests =
    pytest
    py
    flake8

[options.packages.find]
where = src
